# OpenERP

./: .gitignore  README.md  deploy.sh
backend/: Cargo.toml  Dockerfile  deploy-backend.sh
backend/src/: main.rs
backend/src/endpoints/: health.rs  intersections.rs  mod.rs
backend/src/models/: request.rs  response.rs  status.rs
frontend/: Dockerfile  deploy-frontend.sh  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: request.tsx
frontend/src/components/: Map.tsx
frontend/src/components/Map/: Map.tsx  MarkerLayer.tsx  RadiusSlider.tsx
frontend/src/components/Utils/: Loading.tsx
frontend/src/model/: request.tsx  response.tsx
k8s/backend/: deployment.yaml  service.yaml
k8s/db/: postgres-secret.yaml  postgres-statefulset.yaml
k8s/ingress/: deploy-ingress.sh  ingress.yaml
k8s/jobs/: osm2pgsql.yaml
